# Sanic

./: .dockerignore  .gitignore  1  Dockerfile  README.md  arm.Dockerfile  database.py  pyproject.toml  server.py
.github/workflows/: deploy-arm.yaml  deploy.yaml
deploy/: deployment.yaml  ingress.yaml  secrets.yaml
middleware/: auth.py
models/: auth.py  main.py
routes/: auth.py  main.py
src/: addon.py  auth.py  database.py
